--- a/salt/elasticsearch/etc/elasticsearch/elasticsearch.yml
+++ b/salt/elasticsearch/etc/elasticsearch/elasticsearch.yml
@@ -1,91 +1,40 @@
-# ======================== Elasticsearch Configuration =========================
-#
-# NOTE: Elasticsearch comes with reasonable defaults for most settings.
-#       Before you set out to tweak and tune the configuration, make sure you
-#       understand what are you trying to accomplish and the consequences.
-#
-# The primary way of configuring a node is via this file. This template lists
-# the most important settings you may want to configure for a production cluster.
-#
-# Please see the documentation for further information on configuration options:
-# <http://www.elastic.co/guide/en/elasticsearch/reference/current/setup-configuration.html>
-#
-# ---------------------------------- Cluster -----------------------------------
-#
-# Use a descriptive name for your cluster:
-#
-#cluster.name: my-application
-#
-# ------------------------------------ Node ------------------------------------
-#
-# Use a descriptive name for the node:
-#
-#node.name: node-1
-#
-# Add custom attributes to the node:
-#
-#node.attr.rack: r1
-#
-# ----------------------------------- Paths ------------------------------------
-#
-# Path to directory where to store the data (separate multiple locations by comma):
-#
-#path.data: /path/to/data
-#
-# Path to log files:
-#
-#path.logs: /path/to/logs
-#
-# ----------------------------------- Memory -----------------------------------
-#
-# Lock the memory on startup:
-#
-#bootstrap.memory_lock: true
-#
-# Make sure that the heap size is set to about half the memory available
-# on the system and that the owner of the process is allowed to use this
-# limit.
-#
-# Elasticsearch performs poorly when the system is swapping the memory.
-#
-# ---------------------------------- Network -----------------------------------
-#
-# Set the bind address to a specific IP (IPv4 or IPv6):
-#
-#network.host: 192.168.0.1
-#
-# Set a custom port for HTTP:
-#
-#http.port: 9200
-#
-# For more information, see the documentation at:
-# <http://www.elastic.co/guide/en/elasticsearch/reference/current/modules-network.html>
-#
-# --------------------------------- Discovery ----------------------------------
-#
-# Pass an initial list of hosts to perform discovery when new node is started:
-# The default list of hosts is ["127.0.0.1", "[::1]"]
-#
-#discovery.zen.ping.unicast.hosts: ["host1", "host2"]
-#
-# Prevent the "split brain" by configuring the majority of nodes (total number of nodes / 2 + 1):
-#
-#discovery.zen.minimum_master_nodes: 3
-#
-# For more information, see the documentation at:
-# <http://www.elastic.co/guide/en/elasticsearch/reference/current/modules-discovery.html>
-#
-# ---------------------------------- Gateway -----------------------------------
-#
-# Block initial recovery after a full cluster restart until N nodes are started:
-#
-#gateway.recover_after_nodes: 3
-#
-# For more information, see the documentation at:
-# <http://www.elastic.co/guide/en/elasticsearch/reference/current/modules-gateway.html>
-#
-# ---------------------------------- Various -----------------------------------
-#
-# Require explicit names when deleting indices:
-#
-#action.destructive_requires_name: true
+{%- set vars = pillar['elasticsearch'] -%}
+{%- set fqdn = grains['fqdn'] -%}
+{%- set cluster = salt['mine.get']('^es-(?:master|proxy|data|gw)-\d+\S*$', 'cluster_ip_addr', expr_form='pcre') -%}
+{%- set clusterip = cluster[fqdn] -%}
+{%- set httpip = '127.0.0.1' -%}
+{%- set ingest = false -%}
+{%- set master = 'false' -%}
+{%- set data = 'false' -%}
+{%- set http = 'false' -%}
+{%- set ingest = 'false' -%}
+{%- if 'es-data' in grains['host'] -%}
+  {%- set data = 'true' -%}
+{%- elif 'es-master' in grains['host'] -%}
+  {%- set master = 'true' -%}
+{%- elif 'es-gw' in grains['host'] -%}
+  {%- set http = 'true' -%}
+  {%- set ingest = 'true' -%}
+{%- elif 'es-proxy' in grains['host'] -%}
+  {%- set http = 'true' -%}
+{%- else -%}
+  {%- set http = 'true' -%}
+{%- endif -%}
+### MANAGED BY SALT ###
+---
+cluster.name: {{vars['cluster.name']}}
+discovery.zen.ping.unicast.hosts:
+  {% for server, addrs in salt['mine.get']('es-master-\d+\S*$', 'network.ip_addrs', expr_form='pcre') | dictsort() %}
+  - {{addrs[0]}}
+  {% endfor %}
+http.enabled: {{http}}
+{% if httpip is defined and http == 'true' %}
+http.host: {{ httpip }}
+{% endif %}
+network.host: {{clusterip[0]}}
+node.name: {{fqdn}}
+node.data: {{data}}
+node.master: {{master}}
+node.ingest: {{ingest}}
+path.data: "{{vars['path.data']}}"
+path.logs: "{{vars['path.logs']}}"
