Rsyslog gateway should work

--- a/salt/rsyslog/etc/rsyslog.d/15-elastic.conf
+++ b/salt/rsyslog/etc/rsyslog.d/15-elastic.conf
@@ -1,9 +1,10 @@
 {%- set logstash_ip = '127.0.0.1' -%}
 {%- set logstash_port = '10514' -%}
+{%- set es_bulk_size = '1000' -%}
 
 #load needed modules
-module(load="mmjsonparse") #for parsing CEE-enhanced syslog messages
-module(load="omelasticsearch") #for indexing to Elasticsearch
+module(load="mmjsonparse")
+module(load="omelasticsearch")
 
 #try to parse a structured log
 #action(type="mmjsonparse")
@@ -17,30 +18,18 @@ template(name="suricata-index" type="list") {
   property(name="$!timestamp" position.from="1" position.to="4")
   constant(value=".")
   property(name="$!timestamp" position.from="6" position.to="7")
-  constant(value=".")
-  property(name="$!timestamp" position.from="9" position.to="10")
-  constant(value=".")
-  property(name="$!timestamp" position.from="12" position.to="13")
 }
 template(name="cee-index" type="list") {
   constant(value="cee-")
   property(name="timereported" dateFormat="rfc3339" position.from="1" position.to="4")
   constant(value=".")
   property(name="timereported" dateFormat="rfc3339" position.from="6" position.to="7")
-  constant(value=".")
-  property(name="timereported" dateFormat="rfc3339" position.from="9" position.to="10")
-  constant(value=".")
-  property(name="timereported" dateFormat="rfc3339" position.from="12" position.to="13")
 }
 template(name="syslog-index" type="list") {
   constant(value="syslog-")
   property(name="timereported" dateFormat="rfc3339" position.from="1" position.to="4")
   constant(value=".")
   property(name="timereported" dateFormat="rfc3339" position.from="6" position.to="7")
-  constant(value=".")
-  property(name="timereported" dateFormat="rfc3339" position.from="9" position.to="10")
-  constant(value=".")
-  property(name="timereported" dateFormat="rfc3339" position.from="12" position.to="13")
 }
 
 # Add syslog timestamp and hostname to JSON
@@ -63,19 +52,7 @@ template(name="syslog"
            constant(value="\"}")
          }
 
-if $syslogtag contains 'suricata' and $msg startswith '@cee:' then {
-# write the JSON message to the local ES node
-  if $parsesuccess == "OK" then action(
-    type="omelasticsearch"
-    template="customTemplate"
-    searchIndex="suricata-index"
-    dynSearchIndex="on"
-    bulkmode="on"
-    queue.type="linkedlist"
-    queue.size="5000"
-    queue.dequeuebatchsize="300"
-  )
-} else if $msg startswith '@cee:' then {
+if $msg startswith '@cee:' then {
 # write the JSON message to the local ES node
   if $parsesuccess == "OK" then action(
     type="omelasticsearch"
@@ -84,29 +61,8 @@ if $syslogtag contains 'suricata' and $msg startswith '@cee:' then {
     dynSearchIndex="on"
     bulkmode="on"
     queue.type="linkedlist"
-    queue.size="5000"
+    queue.size="{{es_bulk_size}}"
     queue.dequeuebatchsize="300"
-  )
-} else if $syslogtag contains 'apache' then {
-  action(
-    type="omfwd"
-    target="{{ logstash_ip }}"
-    port="{{ logstash_port }}"
-    protocol="tcp"
-  )
-} else if $syslogtag contains 'smbd' then {
-  action(
-    type="omfwd"
-    target="{{ logstash_ip }}"
-    port="{{ logstash_port }}"
-    protocol="tcp"
-  )
-} else if $syslogtag contains 'snoopy' then {
-  action(
-    type="omfwd"
-    target="{{ logstash_ip }}"
-    port="{{ logstash_port }}"
-    protocol="tcp"
   )
 } else {
   action(
@@ -116,7 +72,7 @@ if $syslogtag contains 'suricata' and $msg startswith '@cee:' then {
     dynSearchIndex="on"
     bulkmode="on"
     queue.type="linkedlist"
-    queue.size="5000"
+    queue.size="{{es_bulk_size}}"
     queue.dequeuebatchsize="300"
   )
 }
