A lot of monkeywork and wrenches. And dead braincells. Obv my faults

--- a/salt/rsyslog/etc/rsyslog.d/15-elastic.conf
+++ b/salt/rsyslog/etc/rsyslog.d/15-elastic.conf
@@ -1,14 +1,14 @@
 {%- set logstash_ip = '127.0.0.1' -%}
 {%- set logstash_port = '10514' -%}
-{%- set es_bulk_size = '1000' -%}
+{%- set es_queue_size = '1000' -%}
+{%- set es_bulk_size = '300' -%}
 
 #load needed modules
 module(load="mmjsonparse")
 module(load="omelasticsearch")
 
 #try to parse a structured log
-#action(type="mmjsonparse")
-*.* :mmjsonparse:
+action(type="mmjsonparse")
 
 # Suricata index
 # Use suricata timestamp from JSON
@@ -34,15 +34,25 @@ template(name="syslog-index" type="list") {
 
 # Add syslog timestamp and hostname to JSON
 template(name="customTemplate" type="list") {
-  constant(value="{\"@timestamp\":\"") property(name="timereported" dateFormat="rfc3339")
-  constant(value="\",\"hostname\":\"") property(name="hostname" format="json")
-  constant(value="\",") property(name="$!all-json" position.from="2")
+  constant(value="{\"@timestamp\":\"")            property(name="timereported" dateFormat="rfc3339")
+  constant(value="\",\"hostname\":\"")    property(name="hostname" format="json")
+  constant(value="\",")                   property(name="$!all-json" position.from="2")
+}
+template(name="ceeTemplate"
+               type="list"
+               option.json="on") {
+  constant(value="{\"@timestamp\":\"")            property(name="timereported" dateFormat="rfc3339")
+  constant(value="\",\"hostname\":\"")    property(name="hostname" format="json")
+  constant(value="\",\"facility\":\"")    property(name="syslogfacility-text" format="json")
+  constant(value="\",\"severity\":\"")    property(name="syslogseverity-text" format="json")
+  constant(value="\",\"syslogtag\":\"")   property(name="syslogtag" format="json")
+  constant(value="\",")                   property(name="$!all-json" position.from="5")
 }
 template(name="syslog"
          type="list"
          option.json="on") {
            constant(value="{")
-             constant(value="\"timestamp\":\"")      property(name="timereported" dateFormat="rfc3339")
+             constant(value="\"@timestamp\":\"")             property(name="timereported" dateFormat="rfc3339")
              constant(value="\",\"message\":\"")     property(name="msg")
              constant(value="\",\"host\":\"")        property(name="hostname")
              constant(value="\",\"severity\":\"")    property(name="syslogseverity-text")
@@ -52,18 +62,38 @@ template(name="syslog"
            constant(value="\"}")
          }
 
-if $msg startswith '@cee:' then {
-# write the JSON message to the local ES node
-  if $parsesuccess == "OK" then action(
-    type="omelasticsearch"
-    template="customTemplate"
-    searchIndex="cee-index"
-    dynSearchIndex="on"
-    bulkmode="on"
-    queue.type="linkedlist"
-    queue.size="{{es_bulk_size}}"
-    queue.dequeuebatchsize="300"
-  )
+main_queue(
+  # buffer up to 1M messages in memory
+  queue.size="1000000"
+  # these threads process messages and send them to Elasticsearch
+  queue.workerThreads="4"
+  # rsyslog processes messages in batches to avoid queue contention
+  # this will also be the Elasticsearch bulk size
+  queue.dequeueBatchSize="300"
+)
+
+# Account for both BSD and IETF syslog formats
+if $msg startswith '@cee: ' or $msg startswith ' @cee: ' then {
+  if $syslogtag contains 'suricata' then {
+    if $parsesuccess == "OK" then action(
+      type="omelasticsearch"
+      template="customTemplate"
+      searchIndex="suricata-index"
+      dynSearchIndex="on"
+      bulkmode="on"
+      action.resumeretrycount="-1"
+    )
+  } else {
+    # write the JSON message to the local ES node
+    if $parsesuccess == "OK" then action(
+      type="omelasticsearch"
+      template="customTemplate"
+      searchIndex="cee-index"
+      dynSearchIndex="on"
+      bulkmode="on"
+      action.resumeretrycount="-1"
+    )
+  }
 } else {
   action(
     type="omelasticsearch"
@@ -71,9 +101,7 @@ if $msg startswith '@cee:' then {
     searchIndex="syslog-index"
     dynSearchIndex="on"
     bulkmode="on"
-    queue.type="linkedlist"
-    queue.size="{{es_bulk_size}}"
-    queue.dequeuebatchsize="300"
+    action.resumeretrycount="-1"
   )
 }
 #stop
