Deploy fail resolution (needs manage check) and rsyslog tuning

--- a/salt/rsyslog/etc/rsyslog.d/15-elastic.conf
+++ b/salt/rsyslog/etc/rsyslog.d/15-elastic.conf
@@ -34,31 +34,27 @@ template(name="syslog-index" type="list") {
 
 # Add syslog timestamp and hostname to JSON
 template(name="customTemplate" type="list") {
-  constant(value="{\"@timestamp\":\"")            property(name="timereported" dateFormat="rfc3339")
-  constant(value="\",\"hostname\":\"")    property(name="hostname" format="json")
-  constant(value="\",")                   property(name="$!all-json" position.from="2")
+  constant(value="{\"@timestamp\":\"")                      property(name="timereported" dateFormat="rfc3339")
+  constant(value="\",\"hostname\":\"")                      property(name="hostname" format="json")
+  constant(value="\",")                                     property(name="$!all-json" position.from="2")
 }
-template(name="ceeTemplate"
-               type="list"
-               option.json="on") {
-  constant(value="{\"@timestamp\":\"")            property(name="timereported" dateFormat="rfc3339")
-  constant(value="\",\"hostname\":\"")    property(name="hostname" format="json")
-  constant(value="\",\"facility\":\"")    property(name="syslogfacility-text" format="json")
-  constant(value="\",\"severity\":\"")    property(name="syslogseverity-text" format="json")
-  constant(value="\",\"syslogtag\":\"")   property(name="syslogtag" format="json")
-  constant(value="\",")                   property(name="$!all-json" position.from="5")
+template(name="ceeTemplate" type="list") {
+  constant(value="{\"@timestamp\":\"")                      property(name="timereported" dateFormat="rfc3339")
+  constant(value="\",\"hostname\":\"")                      property(name="hostname" format="json")
+  constant(value="\",\"program\":\"")                       property(name="programname" format="json")
+  constant(value="\",")                                     property(name="$!all-json" position.from="3")
 }
 template(name="syslog"
          type="list"
          option.json="on") {
            constant(value="{")
-             constant(value="\"@timestamp\":\"")             property(name="timereported" dateFormat="rfc3339")
-             constant(value="\",\"message\":\"")     property(name="msg")
-             constant(value="\",\"host\":\"")        property(name="hostname")
-             constant(value="\",\"severity\":\"")    property(name="syslogseverity-text")
-             constant(value="\",\"facility\":\"")    property(name="syslogfacility-text")
-             constant(value="\",\"syslogtag\":\"")   property(name="syslogtag")
-             constant(value="\",\"program\":\"")     property(name="programname")
+             constant(value="\"@timestamp\":\"")            property(name="timereported" dateFormat="rfc3339")
+             constant(value="\",\"message\":\"")            property(name="msg")
+             constant(value="\",\"host\":\"")               property(name="hostname")
+             constant(value="\",\"severity\":\"")           property(name="syslogseverity-text")
+             constant(value="\",\"facility\":\"")           property(name="syslogfacility-text")
+             constant(value="\",\"syslogtag\":\"")          property(name="syslogtag")
+             constant(value="\",\"program\":\"")            property(name="programname")
            constant(value="\"}")
          }
 
@@ -87,7 +83,7 @@ if $msg startswith '@cee: ' or $msg startswith ' @cee: ' then {
     # write the JSON message to the local ES node
     if $parsesuccess == "OK" then action(
       type="omelasticsearch"
-      template="customTemplate"
+      template="ceeTemplate"
       searchIndex="cee-index"
       dynSearchIndex="on"
       bulkmode="on"
