Foray into ingestion

--- a/salt/rsyslog/etc/rsyslog.d/15-elastic.conf
+++ b/salt/rsyslog/etc/rsyslog.d/15-elastic.conf
@@ -65,7 +65,7 @@ main_queue(
   queue.workerThreads="4"
   # rsyslog processes messages in batches to avoid queue contention
   # this will also be the Elasticsearch bulk size
-  queue.dequeueBatchSize="300"
+  queue.dequeueBatchSize="{{es_bulk_size}}"
 )
 
 # Account for both BSD and IETF syslog formats
