Workin on kafka deploy

--- a/salt/kafka/etc/kafka/server.properties
+++ b/salt/kafka/etc/kafka/server.properties
@@ -99,8 +99,10 @@ log.retention.hours=168
 # segments don't drop below log.retention.bytes.
 #log.retention.bytes=1073741824
 
+{%- set mem = (grains['mem_total']/3|round(1, 'floor')*1024)|int -%}
+
 # The maximum size of a log segment file. When this size is reached a new log segment will be created.
-log.segment.bytes=1073741824
+log.segment.bytes={{mem}}
 
 # The interval at which log segments are checked to see if they can be deleted according
 # to the retention policies
