Moving toward kafka setup

--- a/salt/rsyslog/etc/rsyslog.d/14-kafka.conf
+++ b/salt/rsyslog/etc/rsyslog.d/14-kafka.conf
@@ -1,10 +1,6 @@
 module(load="omkafka")
-
-main_queue(
-  queue.workerthreads="2"      # threads to work on the queue
-  queue.dequeueBatchSize="100" # max number of messages to process at once
-  queue.size="10000"           # max queue size
-)
+module(load="mmjsonparse")
+#module(load="")
 
 template(name="syslog"
          type="list"
