--- a/salt/rsyslog/etc/rsyslog.d/14-kafka.conf
+++ b/salt/rsyslog/etc/rsyslog.d/14-kafka.conf
@@ -1,7 +1,18 @@
 module(load="omkafka")
 module(load="mmjsonparse")
-#module(load="")
+module(load="mmnormalize")
 
+template(name="customTemplate" type="list") {
+  constant(value="{\"@timestamp\":\"")                      property(name="timereported" dateFormat="rfc3339")
+  constant(value="\",\"hostname\":\"")                      property(name="hostname" format="json")
+  constant(value="\",")                                     property(name="$!all-json" position.from="2")
+}
+template(name="ceeTemplate" type="list") {
+  constant(value="{\"@timestamp\":\"")                      property(name="timereported" dateFormat="rfc3339")
+  constant(value="\",\"hostname\":\"")                      property(name="hostname" format="json")
+  constant(value="\",\"program\":\"")                       property(name="programname" format="json")
+  constant(value="\",")                                     property(name="$!all-json" position.from="3")
+}
 template(name="syslog"
          type="list"
          option.json="on") {
@@ -16,10 +27,40 @@ template(name="syslog"
            constant(value="\"}")
          }
 
-# NOTE! Insert program filter here
-action(
-  broker=["localhost:9092"]
-  type="omkafka"
-  topic="logs"
-  template="syslog"
-)
+if $msg startswith '@cee: ' or $msg startswith ' @cee: ' then {
+  action(type="mmjsonparse")
+  if $syslogtag contains 'suricata' then {
+    if $parsesuccess == "OK" then action(
+      broker=["{{kafkahost}}:{{kafkaport}}"]
+      type="omkafka"
+      topic="suricata"
+      template="customTemplate"
+    )
+  } else {
+    # write the JSON message to the local ES node
+    if $parsesuccess == "OK" then action(
+      broker=["{{kafkahost}}:{{kafkaport}}"]
+      type="omkafka"
+      topic="cee"
+      template="customTemplate"
+    )
+  }
+} else if $syslogtag contains 'apache' then {
+  action(type="mmnormalize"
+    rulebase="{{apacherules}}"
+  )
+  action(
+    broker=["{{kafkahost}}:{{kafkaport}}"]
+    type="omkafka"
+    topic="apache"
+    template="ceeTemplate"
+  )
+} else {
+  action(
+    broker=["{{kafkahost}}:{{kafkaport}}"]
+    type="omkafka"
+    topic="syslog"
+    template="syslog"
+  )
+}
+#stop
