--- a/salt/rsyslog/etc/rsyslog.d/14-kafka.conf
+++ b/salt/rsyslog/etc/rsyslog.d/14-kafka.conf
@@ -42,7 +42,7 @@ if $msg startswith '@cee: ' or $msg startswith ' @cee: ' then {
       broker=["{{kafkahost}}:{{kafkaport}}"]
       type="omkafka"
       topic="cee"
-      template="customTemplate"
+      template="ceeTemplate"
     )
   }
 } else if $syslogtag contains 'apache' then {
@@ -52,7 +52,7 @@ if $msg startswith '@cee: ' or $msg startswith ' @cee: ' then {
   action(
     broker=["{{kafkahost}}:{{kafkaport}}"]
     type="omkafka"
-    topic="apache"
+    topic="syslog"
     template="ceeTemplate"
   )
 } else {
