--- a/salt/rsyslog/etc/rsyslog.d/14-kafka.conf
+++ b/salt/rsyslog/etc/rsyslog.d/14-kafka.conf
@@ -52,7 +52,7 @@ if $msg startswith '@cee: ' or $msg startswith ' @cee: ' then {
   action(
     broker=["{{kafkahost}}:{{kafkaport}}"]
     type="omkafka"
-    topic="syslog"
+    topic="apache"
     template="ceeTemplate"
   )
 } else {
