Unchanged file limit = eventual crash

--- a/salt/kafka/etc/init/kafka.conf
+++ b/salt/kafka/etc/init/kafka.conf
@@ -13,4 +13,6 @@ end script
 setuid {{user}}
 setgid {{user}}
 
+limit nofile 50000 50000
+
 exec {{home}}/kafka_2.11-{{version}}/bin/kafka-server-start.sh {{confdir}}/config.properties 2>&1 | logger -t kafka -p daemon.info
