--- a/salt/rsyslog/etc/rsyslog.d/14-kafka.conf
+++ b/salt/rsyslog/etc/rsyslog.d/14-kafka.conf
@@ -2,6 +2,18 @@ module(load="omkafka")
 module(load="mmjsonparse")
 module(load="mmnormalize")
 
+main_queue(
+  queue.workerThreads="4"
+  queue.dequeueBatchSize="100"
+  queue.highWatermark="500000"    # max no. of events to hold in memory
+  queue.lowWatermark="200000"     # use memory queue again, when it's back to this level
+  queue.spoolDirectory="/var/spool/rsyslog"  # where to write on disk
+  queue.fileName="logs"
+  queue.maxDiskSpace="25g"        # it will stop at this much disk space
+  #queue.size="5000000"           # or this many messages
+  queue.saveOnShutdown="on"      # save memory queue contents to disk when rsyslog is exiting
+)
+
 template(name="customTemplate" type="list") {
   constant(value="{\"@timestamp\":\"")                      property(name="timereported" dateFormat="rfc3339")
   constant(value="\",\"hostname\":\"")                      property(name="hostname" format="json")
