--- a/salt/kibana/etc/kibana/kibana.yml
+++ b/salt/kibana/etc/kibana/kibana.yml
@@ -42,8 +42,8 @@ server.name: "{{grains['fqdn']}}"
 
 # Paths to the PEM-format SSL certificate and SSL key files, respectively. These
 # files enable SSL for outgoing requests from the Kibana server to the browser.
-server.ssl.cert: {{vars['ssl.cert']}}
-server.ssl.key: {{vars['ssl.key']}}
+# server.ssl.cert: {{vars['ssl.cert']}}
+# server.ssl.key: {{vars['ssl.key']}}
 
 # Optional settings that provide the paths to the PEM-format SSL certificate and key files.
 # These files validate that your Elasticsearch backend uses the same key files.
