--- a/salt/elastic-cluster/kibana/etc/kibana/kibana.yml
+++ b/salt/elastic-cluster/kibana/etc/kibana/kibana.yml
@@ -1,4 +1,3 @@
-{%- set vars = pillar['kibana'] -%}
 # Kibana is served by a back end server. This setting specifies the port to use.
 #server.port: 5601
 
@@ -16,7 +15,7 @@ server.host: "0.0.0.0"
 #server.maxPayloadBytes: 1048576
 
 # The Kibana server's name.  This is used for display purposes.
-server.name: "{{grains['fqdn']}}"
+server.name: "{{ grains.fqdn }}"
 
 # The URL of the Elasticsearch instance to use for all your queries.
 #elasticsearch.url: "http://localhost:9200"
@@ -40,10 +39,12 @@ server.name: "{{grains['fqdn']}}"
 #elasticsearch.username: "user"
 #elasticsearch.password: "pass"
 
+{%- if pillar.kibana["manage.tls"] == true -%}
 # Paths to the PEM-format SSL certificate and SSL key files, respectively. These
 # files enable SSL for outgoing requests from the Kibana server to the browser.
-# server.ssl.cert: {{vars['ssl.cert']}}
-# server.ssl.key: {{vars['ssl.key']}}
+server.ssl.cert: {{ pillar.kibana['ssl.cert'] }}
+server.ssl.key: {{ pillar.kibana['ssl.key'] }}
+{%- endif -%}
 
 # Optional settings that provide the paths to the PEM-format SSL certificate and key files.
 # These files validate that your Elasticsearch backend uses the same key files.
