--- a/salt/elastic-cluster/kibana/etc/kibana/kibana.yml
+++ b/salt/elastic-cluster/kibana/etc/kibana/kibana.yml
@@ -39,12 +39,12 @@ server.name: "{{ grains.fqdn }}"
 #elasticsearch.username: "user"
 #elasticsearch.password: "pass"
 
-{%- if pillar.kibana["manage.tls"] == true -%}
+{% if pillar.kibana["manage.tls"] == true %}
 # Paths to the PEM-format SSL certificate and SSL key files, respectively. These
 # files enable SSL for outgoing requests from the Kibana server to the browser.
 server.ssl.cert: {{ pillar.kibana['ssl.cert'] }}
 server.ssl.key: {{ pillar.kibana['ssl.key'] }}
-{%- endif -%}
+{% endif %}
 
 # Optional settings that provide the paths to the PEM-format SSL certificate and key files.
 # These files validate that your Elasticsearch backend uses the same key files.
